--- a/index.html
+++ b/index.html
@@ -3,22 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lana Del Rey </title>
+    <title>Maria Vitoria </title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="conteiner">
+
+
     <nav>
         <ul>
             <li>
-                <a> Sobre mim</a>
+                <a href="index.html"> Sobre mim</a>
             </li>
             <li>
-                </a> Projetos</a>
+                <a href="project.html"> Projetos</a>
             </li>
             <li>
-                <a>Contato</a>
+                <a href="contact.html">Contato</a>
             </li>
         </ul>
     </nav>
+    <header>
+<div class="center">
+    <img src="./IMG/img.minha.jpg"></img>
+</div>
+<h1>Maria Vitoria</h1>
+<h2>Estudante</h2>
+    </header>
+    <main>
+        <section>
+            <h3>Sobre mim</h3>
+            <p>
+                Maria Vitória é uma estudante do terceiro ano do ensino médio, no colégio cívico militar do Paraná. 
+                Tem variados hobbies que fazem ela passar o tempo como sua guitarra, cadernos de desenhos e seus vários tipos de livros. 
+                O começo pela luta do seu futuro na moda com seu objetivo de faculdade e trabalho ainda está apenas começando.
+            </p>
+        </section>
+        <section>
+            <h3>Ojetivos</h3>
+            <p>
+                Estabelecer metas claras, como adquirir experiência profissional, ampliar e aprofundar o conhecimento na área de estudo, é fundamental para o sucesso pra o futuro.
+                A melhoria do psicológico também é um objetivo essencial para alcançar equilíbrio e bem-estar. Isso envolve praticar o autoconhecimento, lidar melhor com as emoções e desenvolver a resiliência diante das adversidades.
+            </p>
+        </section>
+        <section>
+            <h3>Gostos</h3>
+            <p>
+                Um exemplo e a arte que permite explorar a criatividade, aliviar o estresse e descobrir novas formas de ver o mundo.
+                Além disso, pode ser uma maneira única de se comunicar, transmitindo sentimentos e pensamentos que palavras muitas vezes não conseguem expressar.
+            </p>
+        </section>
+    </main>
+    <footer>
+        <a href="https://github.com/Mariavit30/mavi3c" target="_blank" rel="noopener noreferrer">
+           <img src="./IMG/github.png"></img>
+           <p>Github</p>
+        </a> 
+
+        <a href=" https://instagram.com/Mariavit30/mavi3c" target="_blank" rel="noopener noreferrer">
+            <img src="./IMG/img.insa.webp"></img>
+            <p>Instagram</p>
+        </a>
+        
+        <a href=" https://youtube.com/Mariavit30/mavi3c" target="_blank" rel="noopener noreferrer">
+            <img src="./IMG/img.youtube.png"></img>
+            <p>Youtube</p>
+          </a>
+    </footer>
+    </div>
 </body>
 </html>
